--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "workshop",
   "version": "1.0.0",
+  "scripts": {
+    "build-functions": "netlify deploy --prod"
+  },
   "dependencies": {
+    "netlify-cli": "^2.15.0",
     "node-rdkafka": "^2.7.1-2"
   }
 }
