--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,7 @@
   "name": "functions",
   "version": "1.0.0",
   "scripts": {
-    "build-functions": "zip-it-and-ship-it functions functions-dist"
+    "build-functions": "zip-it-and-ship-it . ../functions-dist"
   },
   "dependencies": {
     "axios": "^0.19.0",
