--- a/services/user/asyncapi.yaml
+++ b/services/user/asyncapi.yaml
@@ -9,33 +9,33 @@ servers:
     protocol: kafka
 
 channels:
-  trip/requested:
+  ride/requested:
     subscribe:
-      operationId: tripRequested
-      summary: Trip requested
-      description: The user requested a trip.
+      operationId: rideRequested
+      summary: Ride requested
+      description: The user requested a ride.
       message:
-        $ref: '#/components/messages/tripRequested'
-  trip/changed:
+        $ref: '#/components/messages/rideRequested'
+  ride/changed:
     publish:
-      operationId: tripChanged
-      summary: Trip status changed
+      operationId: rideChanged
+      summary: Ride status changed
       message:
-        $ref: '#/components/messages/tripStatus'
+        $ref: '#/components/messages/rideStatus'
  
 components:
   messages:
-    tripRequested:
+    rideRequested:
       payload:
         type: object
         properties:
           userId:
             $ref: '#/components/schemas/userId'
-          trip:
-            $ref: '#/components/schemas/trip'
+          ride:
+            $ref: '#/components/schemas/ride'
           sentAt:
             $ref: '#/components/schemas/sentAt'
-    tripStatus:
+    rideStatus:
       payload:
         type: object
         properties:
@@ -43,8 +43,8 @@ components:
             $ref: '#/components/schemas/userId'
           driverId:
             $ref: '#/components/schemas/driverId'
-          trip:
-            $ref: '#/components/schemas/trip'
+          ride:
+            $ref: '#/components/schemas/ride'
           sentAt:
             $ref: '#/components/schemas/sentAt'
   schemas:
@@ -58,25 +58,25 @@ components:
     driverId:
       type: integer
       description: Id of the driver.
-    trip:
+    ride:
       type: object
       properties:
         id:
           type: integer
-          description: Id of the trip.
+          description: Id of the ride.
         from:
-          $ref: '#/components/schemas/tripLocation'
-          description: Position where the trip starts from.
+          $ref: '#/components/schemas/rideLocation'
+          description: Position where the ride starts from.
         to:
-          $ref: '#/components/schemas/tripLocation'
-          description: Position where the trip finishes.
+          $ref: '#/components/schemas/rideLocation'
+          description: Position where the ride finishes.
         price:
           type: number
           minimum: 0
-          description: Price of the trip in Euros.
+          description: Price of the ride in Euros.
         status:
           type: string
-          description: Status of the trip.
+          description: Status of the ride.
           enum:
             - requested
             - accepted
@@ -84,7 +84,7 @@ components:
             - started
             - finished
             - paid
-    tripLocation:
+    rideLocation:
       type: object
       properties:
         latitude:
