--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "kafkajs": "^1.11.0",
-    "netlify-lambda": "^1.6.3"
+    "netlify-lambda": "^1.6.3",
+    "qs": "^6.9.0"
   }
 }
