--- a/services/package.json
+++ b/services/package.json
@@ -2,6 +2,7 @@
   "name": "workshop",
   "version": "1.0.0",
   "dependencies": {
-    "node-rdkafka": "^2.7.1-2"
+    "dotenv": "^8.1.0",
+    "kafkajs": "^1.11.0"
   }
 }
