--- a/services/driver/package.json
+++ b/services/driver/package.json
@@ -9,8 +9,9 @@
     "colors": "^1.4.0",
     "dotenv": "^8.1.0",
     "hermesjs": "2.x",
-    "hermesjs-kafka": "^2.0.3",
     "hermesjs-router": "1.x",
+    "hermesjs-kafka": "2.x",
+    
     "node-fetch": "^2.6.0",
     "node-yaml-config": "0.0.4"
   }
