--- a/services/driver/asyncapi.yaml
+++ b/services/driver/asyncapi.yaml
@@ -8,7 +8,7 @@ servers:
     url: tcp://localhost:9092
     protocol: kafka
   production:
-    url: tcp://pkc-e0x5p.us-east1.gcp.confluent.cloud:9092
+    url: tcp://velomobile-01.srvs.cloudkafka.com:9094
     protocol: kafka
 
 channels:
@@ -26,10 +26,3 @@ channels:
       description: The driver has been assigned a ride.
       message:
         $ref: '../control/asyncapi.yaml#/components/messages/rideAssigned'
-  ride/changed:
-    subscribe:
-      operationId: rideChanged
-      summary: Ride changed
-      description: The driver changed the status of a ride.
-      message:
-        $ref: '../control/asyncapi.yaml#/components/messages/rideChanged'
