--- a/services/user/asyncapi.yaml
+++ b/services/user/asyncapi.yaml
@@ -4,18 +4,12 @@ info:
   version: '1.0.0'
 
 servers:
-  dev:
-    url: tcp://localhost:9092
-    protocol: kafka
-  production:
-    url: tcp://velomobile-01.srvs.cloudkafka.com:9094
-    protocol: kafka
+  $ref: '../definitions.yaml#/servers'
 
 channels:
   ride/requested:
     subscribe:
-      operationId: rideRequested
-      summary: Ride requested
-      description: The user requested a ride.
-      message:
-        $ref: '../control/asyncapi.yaml#/components/messages/rideRequested'
+      $ref: '../definitions.yaml#/operations/rideRequested'
+  ride/assigned:
+    publish:
+      $ref: '../definitions.yaml#/operations/rideAssigned'
