Move notifications to Driver API

--- a/services/driver/asyncapi.yaml
+++ b/services/driver/asyncapi.yaml
@@ -10,6 +10,9 @@ channels:
   ride/requested:
     publish:
       $ref: '../definitions.yaml#/operations/rideRequested'
+  ride/accepted:
+    subscribe:
+      $ref: '../definitions.yaml#/operations/rideAccepted'
   ride/assigned:
     publish:
       $ref: '../definitions.yaml#/operations/rideAssigned'
