--- a/services/driver/config/common.yml
+++ b/services/driver/config/common.yml
@@ -3,6 +3,9 @@ default:
     name: Driver API
     version: 1.0.0
 
+  driver:
+    id: U34F2JRRS
+
   broker:
     kafka:
       clientId: driverApi
