--- a/services/control/config/common.yml
+++ b/services/control/config/common.yml
@@ -11,6 +11,7 @@ default:
       consumerOptions:
         groupId: 'replace-me'
       topics:
+        - participant__added
         - ride__requested
         - ride__accepted
       topicSeparator: '__'
