--- a/services/control/package.json
+++ b/services/control/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "control-panel-api",
+  "name": "ride-app-control-panel-api",
   "description": "",
   "version": "1.0.0",
   "scripts": {
