--- a/services/control/package.json
+++ b/services/control/package.json
@@ -9,9 +9,9 @@
     "colors": "^1.4.0",
     "dotenv": "^8.1.0",
     "hermesjs": "2.x",
-    "hermesjs-router": "1.x",
     "hermesjs-kafka": "2.x",
-    
+    "hermesjs-router": "1.x",
+    "lowdb": "^1.0.0",
     "node-fetch": "^2.6.0",
     "node-yaml-config": "0.0.4"
   }
